manifests/5-tls/ingress-v2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-workshop
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod-public
  labels:
    app: k8s-workshop
spec:
  tls:
    - secretName: k8s-workshop-certificate
      hosts:
        - foo.workshop.team-parallax.com
  rules:
  - host: foo.workshop.team-parallax.com
    http:
      paths:
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:
            name: k8s-workshop-svc
            port:
              name: http
